force-app/main/default/objects/iigproduct_2__Survey__c/fields/IsPromotors__c.field-meta.xml
<CustomField>
    <fullName>IsPromotors__c</fullName>
    <formula>if( NPS_Group__c = &apos;Promotors&apos;, true, false)</formula>
    <label>IsPromotors</label>
    <type>Checkbox</type>
</CustomField>