force-app/main/default/objects/iigproduct_2__Survey__c/fields/NPS_Group__c.field-meta.xml
<CustomField>
    <fullName>NPS_Group__c</fullName>
    <formula>CASE(iigproduct_2__NPS_Score__c, 5, &apos;Promotors&apos;, 4, &apos;Passives&apos;, 3, &apos;Detractors&apos;, 2, &apos;Detractors&apos;, 1, &apos;Detractors&apos;, &apos;Detractors&apos;)</formula>
    <label>NPS Group</label>
    <type>Text</type>
</CustomField>