force-app/main/default/objects/iigproduct_2__Survey__c/fields/Survey_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Survey_Submitted__c</fullName>
    <formula>IF( OR( NOT(ISNULL(iigproduct_2__OSAT_Score__c )),  
        NOT(ISNULL( iigproduct_2__NPS_Score__c )) ,
        NOT(ISBLANK( iigproduct_2__Verbatim__c )) 
  ) 
, true
, false)</formula>
    <label>Survey Submitted</label>
    <type>Checkbox</type>
</CustomField>