force-app/main/default/objects/iigproduct_2__Survey__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>iigproduct_2__ChatSession__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>iigproduct_2__OSAT_Score__c</columns>
    <columns>iigproduct_2__NPS_Score__c</columns>
    <columns>iigproduct_2__Verbatim__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>